--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^3.0.0"
+    "vite": "^3.0.4"
+  },
+  "dependencies": {
+    "three": "^0.143.0"
   }
 }
